引入typescript；增加province页面

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/echarts": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "antd": "^4.0.4",
@@ -75,6 +76,7 @@
     "superagent-promise": "^1.1.0",
     "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
+    "typescript": "^3.9.3",
     "url-loader": "2.3.0",
     "webpack": "4.41.5",
     "webpack-dev-server": "3.10.2",
